@@ -8,6 +8,8 @@ Changes in version 1.105
 - Fixed the path_match function to match filenames containing pattern
   characters (ie [filename] etc).
 
+- Files generated by cli-generate now indicate the source .cli file.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
